Remove PlayerTracking from core APIs and Go SDK
