# pkg/sdkserver/sdk.go
@@ -75,16 +75,6 @@ func convert(gs *agonesv1.GameServer) *sdk.GameServer {
 		result.Status.Ports = append(result.Status.Ports, grpcPort)
 	}
 
-	if runtime.FeatureEnabled(runtime.FeaturePlayerTracking) {
-		if gs.Status.Players != nil {
-			result.Status.Players = &sdk.GameServer_Status_PlayerStatus{
-				Count:    gs.Status.Players.Count,
-				Capacity: gs.Status.Players.Capacity,
-				Ids:      gs.Status.Players.IDs,
-			}
-		}
-	}
-
 	if runtime.FeatureEnabled(runtime.FeatureCountsAndLists) {
 		if gs.Status.Counters != nil {
 			counters := make(map[string]*sdk.GameServer_Status_CounterStatus, len(gs.Status.Counters))
